# cowork-to-code-bridge

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  bridge_client.py  install.sh  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: bump-formula.yml  ci.yml
cowork_to_code_bridge/: __init__.py  client.py  daemon.py  selfcheck.py  uninstall.py
daemon/: daemon.py  uninstall.sh
docs/: RECIPES.md  RELEASING.md  SESSION_HANDOFF.md  architecture.md  launch-kit.md
examples/: cowork_usage.md
examples/allowed_scripts/: approve_plan.sh  disk_hogs.sh  env_check.sh  list_scripts.sh  mcp_audit.sh  open_browser.sh  process_kill.sh  run_claude.sh
homebrew-tap/: README.md
homebrew-tap/Formula/: cowork-to-code-bridge.rb
skill/cowork-to-code-bridge/: SKILL.md  bridge_client.py
skills/run-on-mac/: SKILL.md
skills/setup/: SKILL.md
tests/: test_crash_resilience.py  test_e2e_idempotency.py  test_single_file_client.py  test_system_scripts.py
