[project]
name = "cowork-to-code-bridge"
version = "0.5.0"
description = "Connect Claude Cowork to Claude Code on your own computer (macOS or Linux) via a small, idempotent, file-based bridge daemon. Cowork hands tasks to a local Claude Code agent (and can run approved scripts)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Abhi Gadikoppula" },
]
keywords = ["claude", "cowork", "claude-code", "bridge", "rpc", "agent", "ipc", "sandbox"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/abhinaykrupa/cowork-to-code-bridge"
Repository = "https://github.com/abhinaykrupa/cowork-to-code-bridge"
Issues = "https://github.com/abhinaykrupa/cowork-to-code-bridge/issues"

[project.scripts]
cowork-to-code-bridge-daemon = "cowork_to_code_bridge.daemon:main"
cowork-to-code-bridge-uninstall = "cowork_to_code_bridge.uninstall:main"
cowork-to-code-bridge-selfcheck = "cowork_to_code_bridge.selfcheck:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["cowork_to_code_bridge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]
# The single-file client (bridge_client.py) intentionally uses compact
# one-liners (if x: payload[...]) to stay small and self-contained. Allow them.
ignore = ["E701", "E702"]
